database/base/postgresql_old/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: database
  name: database
