database/base/postgresql_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - postgresql.prod.ftscode.de
    secretName: postgresql-monitor-tls
  rules:
  - host: postgresql.prod.ftscode.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql
            port:
              number: 5342
